rust/core/src/search/snapshots/lucid_suggest_core__search__tests__equal-0.snap
---
source: src/search/mod.rs
expression: results
---
[
    SearchResult {
        id: 30,
        title: "[yellow] [metal] [mailbox]",
    },
    SearchResult {
        id: 20,
        title: "the [metal] detector",
    },
]
