rust/core/src/search/snapshots/lucid_suggest_core__search__tests__intersection-1.snap
---
source: src/search/mod.rs
expression: results
---
[
    SearchResult {
        id: 30,
        highlighted: "yellow metal [mail]box",
    },
]
