rust/core/src/search/snapshots/lucid_suggest_core__search__tests__joined_query-0.snap
---
source: src/search/mod.rs
expression: results
---
[
    SearchResult {
        id: 50,
        title: "[wi]-[fi] router",
    },
]
