rust/core/src/search/snapshots/lucid_suggest_core__search__tests__joined_record-0.snap
---
source: src/search/mod.rs
expression: results
---
[
    SearchResult {
        id: 40,
        title: "[thesaurus]",
    },
    SearchResult {
        id: 20,
        title: "[the] metal detector",
    },
]
