rust/core/src/search/snapshots/lucid_suggest_core__search__tests__partial-0.snap
---
source: src/search/mod.rs
expression: results
---
[
    SearchResult {
        id: 10,
        title: "[brown] [plush] [bear]",
    },
]
