rust/core/src/search/snapshots/lucid_suggest_core__search__tests__partial-1.snap
---
source: src/search/mod.rs
expression: results
---
[
    SearchResult {
        id: 20,
        highlighted: "[metal] [detector]",
    },
    SearchResult {
        id: 30,
        highlighted: "yellow [metal] mailbox",
    },
]
