rust/core/src/search/snapshots/lucid_suggest_core__search__tests__partial-2.snap
---
source: src/search/mod.rs
expression: results
---
[
    SearchResult {
        id: 30,
        title: "[yellow] [metal] [mailbox]",
    },
    SearchResult {
        id: 20,
        title: "[metal] detector",
    },
]
