rust/core/src/search/snapshots/lucid_suggest_core__search__tests__particles-0.snap
---
source: src/search/mod.rs
expression: results
---
[
    SearchResult {
        id: 40,
        title: "[the]saurus",
    },
    SearchResult {
        id: 20,
        title: "[the] metal detector",
    },
]
