rust/core/src/search/snapshots/lucid_suggest_core__search__tests__particles_nolang-0.snap
---
source: src/search/mod.rs
expression: results
---
[
    SearchResult {
        id: 20,
        title: "[the] metal detector",
    },
    SearchResult {
        id: 40,
        title: "[the]saurus",
    },
]
