rust/core/src/search/snapshots/lucid_suggest_core__search__tests__search_empty_lexicographic.snap
---
source: src/search/mod.rs
expression: store.top_ids()
---
[
    10,
    20,
    40,
    50,
    30,
]
